# Predicting_inflation_in_Poland

./: .gitignore  LICENSE  README.md  pyproject.toml
src/inflation_prediction/notebooks/: LSTM_analyse.py  LSTM_multi_col_analyse.py  LSTM_single_col_analyse.py  analyse.py  data_analyse.py  feature_selection.py  selected_feat_HICP_darts_models_analyse.py  single_HICP_darts_models_analyse.py
