[tool.poetry]
name = "predicting-inflation-in-poland"
version = "0.1.0"
description = "A project aimed at predicting future inflation in Poland based on selected economic factors."
authors = ["Szymon-Budziak <szymonbudziak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "inflation_prediction", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
