[tool.poetry]
name = "predicting-inflation-in-poland"
version = "0.1.0"
description = "A project aimed at predicting future inflation in Poland based on selected economic factors."
authors = ["Szymon-Budziak <szymonbudziak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "inflation_prediction", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
plotly = "^5.22.0"
darts = "^0.29.0"
prophet = "^1.1.5"
openpyxl = "^3.1.2"
keras = "^3.3.3"
tensorflow = "^2.16.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"
ipywidgets = "^8.1.2"
jupytext = "^1.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
